# restful-rust-api

./: Cargo.toml  README.md
migrations/2021-05-12-223929_create_boards/: up.sql
migrations/2021-05-12-224032_create_cards/: up.sql
src/: logger.rs  main.rs  models.rs
